tests/files/flow_controller_tests/should_run/055.cmdr
x = 15;
print log(x);