tests/files/flow_controller_tests/should_fail/026.cmdr
x = "cat"
print log(x);